k8s/mongodb-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: thinkify
  labels:
    app: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
