k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: thinkify
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
